--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Hannah Bae"
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "hannahbae895@gmail.com"
+email: "hbae6@ur.rochester.edu"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
 #linkedin_username: "linkedinuser"
